# I_hate_Jetson

./: agent.cpp  agent_saved_1.cpp  agent_saved_2.cpp  agent_saved_3.cpp  racing_controller.py  racing_gain_optimizer.py  racing_line_optimizer.py  racing_run_analysis.py  rs_launch.py
20260524_053520/: racing_trace.csv  summary.txt
Jetson_vision/: CMakeLists.txt  package.xml
Jetson_vision/src/: line_perception_node.cpp
Jetson_vision_3_2/: CMakeLists.txt
Jetson_vision_3_2/include/vision/: feature_extractor.hpp  preprocess.cuh  yolo_trt_engine.hpp
Jetson_vision_3_2/src/: feature_extractor.cpp  line_perception_node.cpp  yolo_preprocess.cu  yolo_trt_engine.cpp
envs/: __init__.py
envs/g1/: g1_env.py
envs/g1_vision/: __init__.py  features.py  g1_vision_config.py  g1_vision_env.py  highlevel_policy.py  scenarios.py
envs/g1_vision_bc/: __init__.py  timing.py
envs/g1_vision_rl/: __init__.py  bc_init.py  g1_vision_rl_config.py  g1_vision_rl_env.py  reward_utils.py
g1_vision_policy/: package.xml  setup.cfg  setup.py
g1_vision_policy/g1_vision_policy/: highlevel_policy_node.py
logs/g1_vision_bc/bc_01/: history.json  model_best.pt  model_last.pt  summary.json
saved_legged_gym/envs/: __init__.py
saved_legged_gym/envs/g1/: g1_config.py
saved_legged_gym/envs/g1_highlevel/: g1_highlevel_config.py  g1_highlevel_env.py
saved_legged_gym/scripts/: export_g1_jit.py  g1_pid_module.py  g1_pid_play.py  high_level_play.py  play.py  play_bezier_follow_heuristic.py  play_cmd_eval.py  play_curvefollow_heuristic.py
scripts/: README_g1_vision.md  g1_highlevel_bc_play.py  g1_pid_collect_dataset.py  g1_pid_module.py  g1_pid_play.py  play.py  train_g1_highlevel_bc.py
scripts/legacy/: README.md  high_level_play.py  play_dots_spline_pid_camera.py  play_linefollow_heuristic.py  replay_lowlevel_cmd_trace.py
vision/: CMakeLists.txt
vision/include/vision/: coordinate_rectifier.hpp  feature_extractor.hpp  line_point_extractor.hpp  preprocess.cuh  types.hpp  yolo_trt_engine.hpp
vision/src/: coordinate_rectifier.cpp  feature_extractor.cpp  line_perception_node.cpp  line_point_extractor.cpp  yolo_preprocess.cu  yolo_trt_engine.cpp
vision_0703/: CMakeLists.txt  hz_test.py  package.xml
vision_0703/config/: yolo26_runtime.yaml
vision_0703/include/vision/: coordinate_rectifier.hpp  feature_extractor.hpp  line_point_extractor.hpp  object_target_extractor.hpp  preprocess.cuh  types.hpp  yolo_trt_engine.hpp
vision_0703/src/: coordinate_rectifier.cpp  feature_extractor.cpp  line_perception_node.cpp  line_point_extractor.cpp  object_target_extractor.cpp  yolo_preprocess.cu  yolo_trt_engine.cpp
vision_2_11/include/vision/: line_point_extractor.hpp  yolo_trt_engine.hpp
vision_2_11/src/: feature_extractor.cpp  line_perception_node.cpp  yolo_trt_engine.cpp
vision_2_14/include/vision/: yolo_trt_engine.hpp
vision_2_14/src/: yolo_trt_engine.cpp
vision_2_2/: CMakeLists.txt  package.xml
vision_2_2/include/vision/: preprocess.cuh  types.hpp  yolo_trt_engine.hpp
vision_2_2/src/: line_perception_node.cpp  yolo_preprocess.cu  yolo_trt_engine.cpp
vision_3_6/src/: centers_to_features_node.cpp  centers_to_features_node_old.cpp  feature_extractor.cpp
vision_4_29/: CMakeLists.txt
vision_4_29/include/vision/: feature_extractor.hpp  line_point_extractor.hpp
vision_4_29/src/: centers_to_features_node_old.cpp  feature_extractor.cpp  line_perception_node.cpp  line_point_extractor.cpp  yolo_trt_engine.cpp
vision_4_29_1/: CMakeLists.txt
vision_4_29_1/include/vision/: feature_extractor.hpp  yolo_trt_engine.hpp
vision_4_29_1/src/: centers_to_features_node.cpp  coordinate_rectifier.cpp  feature_extractor.cpp  line_perception_node.cpp  line_point_extractor.cpp  yolo_preprocess.cu  yolo_trt_engine.cpp
