<?xml version="1.0"?>
<package format="3">
  <name>vision</name>
  <version>0.0.1</version>
  <description>vision line perception: TRT YOLO -> point extraction -> (optional rectifier) -> feature publish</description>

  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
